# Domain-Ensemble-pipeline

./: ..gitignore.swp  .gitignore  .gitmodules  README.md  pyproject.toml
docs/tex_sources/: columns.txt  evaluation_metrics.tex
docs/tex_tables/: full_tables.tex  metrics_stage3.tex  pipeline_verif.tex
docs/thesis_source/: features-en.tex  fitthesis.cls  full_tables.tex  old-tls.tex  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.tex  trash.tex
experiments/: comparison_ploter.ipynb  grid_docs.py  pycarret_model_comparison.ipynb  pycarret_model_comparison.py
experiments/grids/: malware_lex_.csv  malware_rdap_.csv  malwaredns_+rdap_+tls_+geo_+ip_+html_+lex__agg.csv  malwaredns_+rdap__agg.csv  malwarelex_+dns_+ip_+geo_+rdap_+tls__agg.csv  malwarelex_+dns_+ip_+tls_+geo_+rdap_+html__agg.csv  malwarelex_+dns_+ip_+tls_+geo__agg.csv  malwarelex__agg.csv  malwaretls_+geo_+ip__agg.csv  malwaretls_.csv  phishing_dns_.csv  phishing_geo_.csv  phishing_lex_.csv  phishinghtml_+lex__agg.csv  phishinglex_.csv  phishingtls_.csv
experiments/shap/: shap_Lgbm.txt  shap_XgBoost.txt  (+3 more)
src/: classification_example.py  cnn_train.ipynb  comparison_ploter.ipynb  comparison_pycarret.ipynb  dataset_generate.ipynb  ensemble_pipeline_example.ipynb  ensemble_system.ipynb  fpd_train.ipynb  graph  gridmaker.py  nn_train.ipynb  one_domain.ipynb  pipeline.py  pycaret.ipynb  shap.ipynb  svm_bulk_train.ipynb  svm_train.ipynb  tls_new.ipynb  tls_train.ipynb  validator.ipynb  weighting_experiments.ipynb  xgb_lgbm_train.ipynb
(+138 files in other folders)
